src/pages/home/home.scss
.ios, .md {
  page-home {
    .scroll-content {
      height: 90%;
    }

    #map {
      width: 95%;
      height: 85%;
    }

  }

  .btn-text { padding-left: 8px; }

  #hammer-img { 
    height: 80px; 
    width: 80px; 
    position: absolute;
    bottom: 5px;

    transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);

  }
  #hammer-img.rotate {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 80px;
    height: 80px;
    margin: -40px 0 0 -40px;
    -webkit-animation: spin 2s linear infinite;
    -moz-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
  }
  @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); }}
  @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); }}
  @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }}

  #hammer-img.throw {
    -webkit-animation-name: throw;
    -webkit-animation-duration: 2s;
    -webkit-animation-fill-mode: forwards;
    animation-name: throw;
    animation-duration: 2s;
    animation-fill-mode: forwards;
  }

  @-webkit-keyframes throw{
    0% { height: 100%; -webkit-transform: rotate(-360deg); }
    100% { height: 10%; }
  }

  @keyframes throw{
    0% { height: 100%; -webkit-transform: rotate(-360deg); transform:rotate(-360deg); }
    100% { height: 10%; }
  }

  .detail-button { font-size: 22px; font-weight: lighter; line-height: 1.2em; }
  .detail-label { font-size: 20px; font-weight: lighter; }


}

